--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/pcborges/maratona-ibm-desafio-8#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "ibm-watson": "^5.7.0"
+    "ibm-watson": "^5.7.0",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
